Update templates terraform localstack infracost

--- a/.github/workflows/localstack.yml
+++ b/.github/workflows/localstack.yml
@@ -2,10 +2,8 @@ name: Terraform Test with localstack
 
 on:
   push:
-    branchs:
-    - develop
-    branches-ignore:
-      - "main"
+    branches:
+      - "local"
 
 jobs:
 
