--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: | 
           terraform init
           terraform workspace new ${{ env.stack }}
+          terraform workspace select ${{ env.stack }}
         continue-on-error: true
 
       - name: Terraform Apply
