--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -26,6 +26,7 @@ jobs:
           terraform init
           terraform workspace new ${{ env.stack }}
           terraform workspace select ${{ env.stack }}
+          terraform workspace list
         continue-on-error: true
 
       - name: Terraform Apply
