--- a/.github/workflows/terraform-develop.yml
+++ b/.github/workflows/terraform-develop.yml
@@ -28,6 +28,7 @@ jobs:
           terraform init
           terraform workspace new ${{ env.stack }}
           terraform workspace select ${{ env.stack }}
+          terraform workspace list       
         continue-on-error: true
 
       - name: Terraform Validate
